# Personalised-shopping-agent

./: .gitignore  Dockerfile  PROMPT.txt  README.md  inference.py  memory_engine.py  models.py  openenv.yaml  personality_grader.py  product_generator.py  pyproject.toml  requirements.txt  rl_agent.py  run_openenv.py  shopping_env.py  test_endpoints.py
memory/: agent_weights.json  episodic_log.jsonl  learning_log.jsonl  personality.md  preferences.json  projects.md  semantic_memory.jsonl
server/: app.py
static/: index.html
